# ai-budget-optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 002_add_users_table.py  20260107_0001_001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  ai.py  auth.py  campaigns.py  deps.py  health.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  ai.py  alert.py  budget.py  campaign.py  user.py
backend/app/services/: __init__.py  ai_engine.py  auth_service.py  mcp_client.py  platform_manager.py
backend/app/tasks/: __init__.py  monitoring.py
backend/tests/: __init__.py  test_ai_engine.py  test_auth.py  test_auth_comprehensive.py  test_campaigns_api.py  test_health.py  test_mcp_client.py  test_platform_manager.py
docs/: 01-overview.md  02-architecture.md  03-ai-integration.md  04-autonomous-optimization.md  05-data-model.md  06-frontend.md  07-platform-setup.md  08-deployment.md  09-implementation-plan.md  10-business.md  11-security.md  README.md
docs/code-examples/: mcp-server-google-ads.ts  platform-manager.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ProtectedRoute.test.tsx  ProtectedRoute.tsx
frontend/src/components/dashboard/: CampaignTable.tsx  HealthIndicator.tsx  MetricCard.tsx  PlatformCard.tsx  index.ts
frontend/src/components/layout/: AIChat.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
frontend/src/components/recommendations/: RecommendationCard.tsx  index.ts
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: useQueries.test.tsx  useQueries.ts
frontend/src/pages/: Analytics.tsx  Anomalies.tsx  BudgetOptimizer.tsx  Dashboard.tsx  Login.test.tsx  Login.tsx  Recommendations.tsx  Settings.tsx  index.ts
frontend/src/store/: authStore.test.ts  authStore.ts  index.ts
frontend/src/test/: setup.ts  utils.tsx
frontend/src/types/: index.ts
infrastructure/: ecosystem.config.js  init-db.sql
mcp-servers/google-ads-mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp-servers/google-ads-mcp/src/: config.ts  google-ads-client.ts  index.ts
mcp-servers/linkedin-ads-mcp/: package-lock.json  package.json
mcp-servers/linkedin-ads-mcp/src/: config.ts  index.ts  linkedin-ads-client.ts
mcp-servers/meta-ads-mcp/: package-lock.json  package.json
mcp-servers/meta-ads-mcp/src/: config.ts  index.ts  meta-ads-client.ts
mcp-servers/shared/: package.json
mcp-servers/shared/src/: base-server.ts  index.ts  types.ts
mcp-servers/tiktok-ads-mcp/: package-lock.json  package.json  tsconfig.json
mcp-servers/tiktok-ads-mcp/src/: config.ts  index.ts  tiktok-ads-client.ts
scripts/: healthcheck.sh  setup.sh  start-all.sh  stop-all.sh  test-all-mcp-servers.sh  test-mcp-server.sh
(+5 files in other folders)
