# Marketing Budget Optimizer - Backend Configuration

[project]
name = "marketing-budget-optimizer"
version = "0.1.0"
description = "AI-powered marketing budget management"
requires-python = ">=3.11"

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",   # raise without from (sometimes intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # unused arguments ok in tests
"app/api/*" = ["ARG001"]  # FastAPI Depends are unused but required
"app/main.py" = ["ARG001"]  # lifespan app argument

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = false
strict_equality = true
# Note: Relaxed settings for MVP - tighten as codebase matures

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "celery.*",
    "redis.*",
    "httpx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# TODO: Fix type errors in these modules
module = [
    "app.services.ai_engine",
    "app.services.platform_manager",
    "app.api.health",
    "app.api.campaigns",
    "app.api.ai",
    "app.tasks.monitoring",
]
ignore_errors = true

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "app/tasks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 55  # TODO: Increase to 70% as more tests are added
